[gd_scene load_steps=6 format=3 uid="uid://cfxgo5ye53do0"]

[ext_resource type="Script" uid="uid://4yfpdxitkbji" path="res://scripts/main_game/mushrooms/mushroom.gd" id="1_0echp"]
[ext_resource type="PackedScene" uid="uid://d4kyst7qokxst" path="res://scenes/main_game/hit_particles.tscn" id="2_bmcli"]
[ext_resource type="Texture2D" uid="uid://cq78o0i5acgfx" path="res://assets/icons/icon.svg" id="3_adaka"]
[ext_resource type="Material" uid="uid://c4id7ag22mv0v" path="res://resources/materials/flash.tres" id="7_uolev"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s87mg"]
radius = 16.03122

[node name="Mushroom" type="Area2D"]
script = ExtResource("1_0echp")
allowed_tool_types = Array[int]([0, 1, 2, 3, 4])

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
light_mask = 2
visibility_layer = 2
material = ExtResource("7_uolev")
texture = ExtResource("3_adaka")

[node name="GPUParticles2D" parent="." instance=ExtResource("2_bmcli")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.3274121, 1.3274121)
shape = SubResource("CircleShape2D_s87mg")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
